# PostfixCalc

./: .gitignore  CMakeLists.txt  Makefile  README.md  postfixCalc.c  postfixCalc.h  queue.c  queue.h  stack.c  stack.h
Test Files/: GuideToTestFiles.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
